--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ firebase-admin = "*"
 django = "*"
 pillow = "*"
 psycopg = "*"
+gunicorn = "*"
+dj-database-url = "*"
+python_version = "3.10"
 
 [dev-packages]
 
